2007-09-18  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs, src/Files/GenericFile.cs, src/Files/MusicFile.cs,
	  src/Files/ImageFile.cs: Implemented metadata parsing/handling. The lib
	  can handle anything that is thrown at it
	* src/FileSystem.cs: Implemented nearly all the stubs.
	* src/Camera.cs: Added a fixme comment
	* libgphoto2-sharp.mdp: Added ref to System.XML

2007-09-16  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added a FileName property.
	* src/FileSystem.cs: Began implementing the stubs
	* src/Camera.cs: Implemented the FileSystem section

2007-09-16  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Abilities.cs: Removed old CWL.

2007-09-16  Alan McGovern <alan.mcgovern@gmail.com> 

	

2007-09-15  Alan McGovern <alan.mcgovern@gmail.com> 

	

2007-09-15  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Stubbed out the Download methods to get a file from an MTP
	  device
	* src/FileSystem.cs: Stubbed out the Upload method to send a file to an MTP
	  device

2007-09-15  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added some properties and methods which are common to all
	  files
	* src/Files/GenericFile.cs, src/Makefile.am, libgphoto2-sharp.mdp: Added
	  GenericFile class

2007-09-15  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/Camera.cs: Removed old warning

2007-09-15  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Files/MusicFile.cs: Added two more properties

2007-09-13  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Implemented initial support for parsing the correct filetype.
	  Added a list of all the possible fields that MTP can return. Important
	  ones which haven't been implemented will be implemented.
	* src/Files/MusicFile.cs, src/Files/ImageFile.cs: Partially implemented two
	  initial subclasses of File
	* src/Makefile.am: Added two new files to the makefile
	* src/Base/CameraFile.cs: Removed the wrapper for DetectMimetype. Made the