@@ -11,34 +11,39 @@ namespace Gphoto2
 	public class ImageFile : File
 	{
 		// Format enum for the images?
-		public int Format
-		{
-			get { return -1; }
-		}
+//		public int Format
+//		{
+//			get { return -1; }
+//		}
 		
 		public int Depth
 		{
-			get { return -1; }
+			get { return GetInt("ImageBitDepth"); }
+			set { SetInt("ImageBitDepth", value); }
 		}
 		
 		public int Height
 		{
-			get { return -1; }
+			get { return GetInt("Height"); }
+			set { SetInt("Height", value); }
 		}
 		
 		public int Width
 		{
-			get { return -1; }
+			get { return GetInt("Width"); }
+			set { SetInt("Width", value); }
 		}
 		
 		public ImageFile(string metadata, string directory, string filename)
 			: base (metadata, directory, filename)
 		{
+			
 		}
 		
 		// FIXME: Return an image or something
 		public void CreateThumbnail()
 		{
+			
 		}
 	}
 }
